--- a/Styles.css
+++ b/Styles.css
@@ -39,11 +39,12 @@ ul{
   border-radius: 20px;
   margin-right: 10px;
   perspective: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .line-1 {
   height: 0.5px;
   background: azure;
-  margin-right: 8px;
+  margin-right: 10px;
 }
 footer{
   color: rgb(255, 251, 254);
