--- a/Lesson02/styles.css
+++ b/Lesson02/styles.css
@@ -1,9 +1,57 @@
-body {
+body{
+    background-color: black;
+    justify-content: center;
+}
+wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  background-color: black;
-  justify-content: center;
 }
+footer{
+    color: rgb(255, 251, 254);
+    text-align: center;
+    position: relative;
+    top: 200px;
+  }
+  #footer_paragraph{
+    position: relative;
+    top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  #copyright_paragraph{
+    position: relative;
+    top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  a:link {
+    color: rgb(17, 63, 85);
+  }
+  a:visited{
+    color: rgb(132, 16, 221)
+  }
+  a:hover{
+    color: rgb(245, 245, 245)
+  }
+  .rectangle2{
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+  }
+.rectangle{
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+  }
+  h3{
+    grid-column: span 1 / 3;
+    grid-row: 1;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    font-family: Helvetica;
+    font-weight: 500;
+    position: relative;
+    bottom: 150px;
+  }
 h1 {
   font-family: 'Quicksand', sans-serif;
   font-size: 25px;
@@ -19,11 +67,12 @@ h2 {
   grid-column: span 1 / 3;
   grid-row: 1;
   text-align: center;
-  color: #079bf5;
+  color: black;
   font-size: 30px;
   font-family: Helvetica;
-  margin-bottom: 100px;
-  font-weight: 300;
+  font-weight: 500;
+  position: relative;
+  bottom: 200px;
 }
 #fitts_law_head {
   grid-column: 3;
@@ -73,60 +122,104 @@ p {
   text-align: center;
   grid-row: 3;
 }
+p{
+    margin-top: 20px;
+}
 
 @media (max-width:768px) and (min-width:400px){
-    body {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+    body{
+        background-color: black;
+        justify-content: center;
     }
+    
+    wrapper {
+      display: grid;
+      grid-template-columns: 1fr 1fr
+    }
+
     h1 {
       font-family: 'Quicksand', sans-serif;
       font-size: 25px;
     }
     #visual_hierarchy_head {
-      grid-row: 2;
+      grid-row: 3;
       grid-column: 1;
     }
     h2 {
-      grid-column: 1;
-      grid-row: 1;
+        grid-row: 1;
+        grid-column: span 1/3;
+        text-align: center;
+        color: black;
+        font-size: 30px;
+        font-family: Helvetica;
+        margin-bottom: 100px;
+        font-weight: 500;
     }
+    h3{
+        grid-column: span 1 / 3;
+        grid-row: 1;
+        text-align: center;
+        color: black;
+        font-size: 20px;
+        font-family: Helvetica;
+        font-weight: 500;
+        position: relative;
+        bottom: 225px;
+      }
     #fitts_law_head {
-      grid-row: 2;
+      grid-row: 3;
       grid-column: 2;
     }
     #white_space_head {
-      grid-row: 5;
-      grid-column: 1;
-    }
-    #Squarespace {
       grid-row: 6;
       grid-column: 1;
     }
+    #Squarespace {
+      grid-row: 7;
+      grid-column: 1;
+    }
     #Sanvello {
-      grid-row: 3;
+      grid-row: 4;
       grid-column: 2;
     }
   
     #apple {
-      grid-row: 3;
+      grid-row: 4;
       grid-column: 1;
     }
     #squarespace-paragraph {
-      grid-row: 7;
+      grid-row: 8;
       grid-column: 1;
     }
     #sanvello-paragraph {
-      grid-row: 4;
+      grid-row: 5;
       grid-column: 2;
     }
     #apple-paragraph {
-      grid-row: 4;
+      grid-row: 5;
       grid-column: 1;
     }
   }
   @media only screen and (max-width: 400px) {
-    body {
+    body{
+        background-color: black;
+        justify-content: center;
+    }
+
+    h3{
+        grid-column: span 1 / 3;
+        grid-row: 1;
+        text-align: center;
+        color: black;
+        font-size: 20px;
+        font-family: Helvetica;
+        font-weight: 500;
+        position: relative;
+        bottom: 225px;
+      }
+    
+    wrapper {
+      display: grid;
       grid-template-columns: 1fr;
     }
     h1 {
@@ -142,11 +235,11 @@ p {
       grid-column: 1;
       grid-row: 1;
       /* color: rgb(204, 164, 61); */
-      color: #079bf5;
+      color: black;
       font-size:15px;
       font-family: Helvetica;
       margin-bottom: 100px;
-      font-weight: 300;
+      font-weight: 500;
     }
     #fitts_law_head {
       grid-row: 4;
