--- a/Lesson02/styles.css
+++ b/Lesson02/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+
 body{
     background-color: black;
     justify-content: center;
@@ -68,7 +71,7 @@ h2 {
   grid-row: 1;
   text-align: center;
   color: black;
-  font-size: 30px;
+  font-size: 40px;
   font-family: Helvetica;
   font-weight: 800;
   position: relative;
