--- a/Lesson03/typography-styles.css
+++ b/Lesson03/typography-styles.css
@@ -3,11 +3,14 @@
 body {
   font-family: sans-serif;
   font-size: 16px;
-  background-color: black;
+  background-color: #0C120C;
 }
+#logo:hover{
+    opacity: 0.8;
+  }
 ul{
   list-style-type: none;
-  background-color: #333;
+  background-color:#5c5b5f;
   display: flex;
   align-items: center;
 }
@@ -98,4 +101,37 @@ body{
     font-family: 'Quicksand', sans-serif;
     margin-left: 5%;
     color: azure;
+}
+
+footer{
+    color: rgb(255, 251, 254);
+    text-align: center;
+    position: relative;
+    top: 200px;
+  }
+  #footer_paragraph{
+    position: relative;
+    top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  #copyright_paragraph{
+    position: relative;
+    top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .rectangle{
+    width: 100%;
+    height: 150px;
+    border-radius: 20px;
+}
+.rectangle2{
+  width: 100%;
+  height: 100px;
+  border-radius: 10px;
+}
+#footer-link{
+    color: white;
+}
+#footer-link:hover{
+    color:#16F3E8;
 }
