--- a/Lesson04/styles.css
+++ b/Lesson04/styles.css
@@ -81,7 +81,6 @@ li a:hover {
     display: flex;
     color: white;
     padding: 14px 16px;
-    margin-left: 100px;
     padding: 20px;
     flex-direction: column;
     align-items: center;
@@ -122,6 +121,7 @@ footer{
 }
 .rectangle2{
 width: 100%;
+max-width: 1200px;
 height: 100px;
 border-radius: 10px;
 }
