--- a/Lesson05/styles.css
+++ b/Lesson05/styles.css
@@ -6,7 +6,7 @@ body {
   background-color: #0C120C;
 }
 #preston-link a{
-  color: rgb(235, 94, 0);
+  color: rgb(102, 0, 235);
 }
 #pancakes {
   display: none;
@@ -223,6 +223,11 @@ footer{
   position: relative;
   top: 100px;
   font-family: Arial, Helvetica, sans-serif;
+}
+rect{
+  width: 100%;
+  height: 200px;
+  fill: #5c5b5f;
 }
 .rectangle{
   width: 100%;
