--- a/Lesson06/styles.css
+++ b/Lesson06/styles.css
@@ -106,6 +106,8 @@ height: auto;
   margin-right: 20px;
   width: 100%;
   height: auto;
+  border-radius: 5px;
+  box-shadow: 5px 10px;
   
 }
 #forecast{
