--- a/Lesson06/styles.css
+++ b/Lesson06/styles.css
@@ -97,7 +97,7 @@ height: auto;
   padding: 1em;
   padding-left: 200px;
   padding-right: 200px;
-  font-size: 20;
+  font-size: 20px;
   color: aliceblue;
   background-color: rgba(237,28,145, 0.8);
   border-radius: 0px 20px 20px 0px;
