--- a/Styles.css
+++ b/Styles.css
@@ -324,7 +324,8 @@ border-radius: 10px;
 
 }
 .cards{
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   color: aliceblue;
   font-family: Arial, Helvetica, sans-serif;
   font-family: sans-serif;
@@ -348,11 +349,11 @@ body{
 
 @media only screen and (max-width: 1200px) {
   .cards {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
 @media only screen and (max-width: 400px) {
   .cards {
     grid-template-columns: 1fr;
   }
-} ;
+} 
