--- a/sodasprings.css
+++ b/sodasprings.css
@@ -1,8 +1,3 @@
-
-* {padding: .35rem;}
-h2 {text-align:center;}
-img { width: 100%; height: auto;}
-
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 body {
   font-family: sans-serif;
@@ -10,11 +5,20 @@ body {
   background-color: #0C120C;
   overflow-x: hidden;
 }
-#home a{
+#soda-spings-link a{
   color: rgb(102, 0, 235);
 }
-input{
-  color: gray;
+#pancakes {
+  display: none;
+  padding: 1em;
+  text-align: center;
+  font-size: 1.5em;
+  background-color: white;
+  color: #032d30;
+  margin: 0%;
+}
+#contact-paragraph{
+  text-align: center;
 }
 .social{
   width: 3%;
@@ -314,37 +318,3 @@ border-radius: 10px;
 }
 
 }
-.cards{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  color: aliceblue;
-  font-family: Arial, Helvetica, sans-serif;
-  font-family: sans-serif;
-  text-align: center;
-  height: 100%;
-}
-section{
-  margin: 20px;
-  background-color: burlywood;
-  border-radius: 20px;
-
-}
-footer{
-  text-align: center;
-  margin-top: 10px;
-  color: white;
-}
-body{
-  background-color: black;
-}
-
-@media only screen and (max-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-@media only screen and (max-width: 400px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-} 
